crates/canvas-cli/tests/snapshots/review_m8b__m8b_operation_reconcile_json.snap
---
source: crates/canvas-cli/tests/review_m8b.rs
expression: "normalized(reconciled, &server.uri())"
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "<generated_at>",
  "identity": {
    "key": "fixture",
    "origin": "https://canvas.test",
    "user_id": "123"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "assume_not_posted_available": false,
    "attribution": "observed",
    "delivery": "observable",
    "journal_id": "<journal_id>",
    "kind": "discussion_reply",
    "message": "the reply this journal describes is in the thread; accepted by Canvas, and a later read of the thread shows it",
    "outcome": "ok",
    "owner": "n/a",
    "readback": {
      "attachment_ids": [],
      "body_sha256": "abed0e3cbeb6c8f0e67e79ccabc74d88f6712514e40a30160c4ecb322ad29574",
      "complete": true,
      "created_at": "2026-09-09T17:00:00Z",
      "created_at_local": "2026-09-09T13:00:00-04:00",
      "id": "5003",
      "read_at": "<read_at>",
      "scanned": 2,
      "user_id": "123"
    },
    "receipt_id": "<receipt_id>",
    "server_match": null,
    "state": "posted",
    "verdict": "observed"
  },
  "schema": "canvas-cli/operation_reconcile@1",
  "warnings": []
}
